# ChatTGP

./: .gitignore  README.md  deploy.sh  pyproject.toml  ruff.toml
app/: ABOUT.md  app.py
app/components/: __init__.py  admin_automation.py  api_form.py  api_response.py  auth_form.py  client_editor.py  client_list.py  client_py_editor.py  client_py_list.py  prompt_tree.py  session_box.py
app/sites/: admin.py  client_config.py  client_data.py  client_settings.py  docs.py  home.py  local.py  logs.py  prompt_engineering.py  testing.py  user_settings.py
app/src/: auth.py  clients.py  config.py  gcs.py  layout.py  params.py  prompts.py  utils.py
scripts/: create_api_key.py
